--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"><head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <title>岛主已死，请吐痰</title>
+    <meta name="description" content="岛主和它的家人 已经死亡,请吐痰">
+    <link rel="shortcut icon" href="tombstone.png">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Vanilla JavaScript App</title>
 </head>
 
 <body>
-  <main>
-    <h1>Vanilla JavaScript App</h1>
-  </main>
-</body>
+<div style="text-align: center;">
+    <div class="">
+        <h1>岛主的灵堂</h1>
+        <audio controls="controls" loop="loop" autoplay="autoplay"> <source src="2847226467.mp3" type="audio/mpeg"> Your browser does not support the audio element. </audio><br><br>
+        <b>你的PortForward跑路不退款<br>你利用用户电脑DDoS软件小妹<br>你通过污蔑他人的方法来挽回你那可怜的名声</b><br>
+        <h2>今日,你长眠于此,R.I.P</h2>
+    </div>
 
-</html>
+</div>
+
+
+</body></html>
